; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-complex/src/extr_complex.c_complex_to_i.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-complex/src/extr_complex.c_complex_to_i.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mrb_complex = type { i64, i32 }

@E_RANGE_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"can't convert %v into Float\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @complex_to_i to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @complex_to_i(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mrb_complex*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call %struct.mrb_complex* @complex_ptr(i32* %6, i32 %7)
  store %struct.mrb_complex* %8, %struct.mrb_complex** %5, align 8
  %9 = load %struct.mrb_complex*, %struct.mrb_complex** %5, align 8
  %10 = getelementptr inbounds %struct.mrb_complex, %struct.mrb_complex* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %2
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* @E_RANGE_ERROR, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @mrb_raisef(i32* %14, i32 %15, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %16)
  br label %18

18:                                               ; preds = %13, %2
  %19 = load i32*, i32** %3, align 8
  %20 = load %struct.mrb_complex*, %struct.mrb_complex** %5, align 8
  %21 = getelementptr inbounds %struct.mrb_complex, %struct.mrb_complex* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @mrb_int_value(i32* %19, i32 %22)
  ret i32 %23
}

declare dso_local %struct.mrb_complex* @complex_ptr(i32*, i32) #1

declare dso_local i32 @mrb_raisef(i32*, i32, i8*, i32) #1

declare dso_local i32 @mrb_int_value(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
